v1/infra/k8s/ingress/zcypto-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zcypto
  namespace: default
spec:
  tls:
    - hosts:
        - api.zcypto.local
  rules:
    - host: api.zcypto.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zypto
                port:
                  number: 80
